--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
-
+    implementation "com.andkulikov:transitionseverywhere:2.0.0"
+  //  implementation 'com.tbuonomo:creative-viewpager:1.0.1'
     // implementation 'joda-time:joda-time:2.10.5'
 }
