Creative ViePager Added And New Adptor Created State Adaptor

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Activities.AnalysisActivity"></activity>
-        <activity android:name=".Activities.HomeActivity">
+        <activity android:name=".Activities.SateDetailActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.MainActivity"></activity>
+        <activity android:name=".Activities.AnalysisActivity" />
+        <activity android:name=".Activities.HomeActivity">
+
+        </activity>
+        <activity android:name=".Activities.MainActivity" />
     </application>
 
 </manifest>
