--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
@@ -65,7 +67,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
-    implementation "com.andkulikov:transitionseverywhere:2.0.0"
-  //  implementation 'com.tbuonomo:creative-viewpager:1.0.1'
+
+    implementation 'com.tbuonomo:creative-viewpager:1.0.1'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+
     // implementation 'joda-time:joda-time:2.10.5'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
