creative viewpager in java added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".Adapters.TestActivity">
+
+        </activity>
         <activity android:name=".Activities.SateDetailActivity">
+
+        </activity>
+        <activity android:name=".Activities.AnalysisActivity" />
+        <activity android:name=".Activities.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".Activities.AnalysisActivity" />
-        <activity android:name=".Activities.HomeActivity">
-
         </activity>
         <activity android:name=".Activities.MainActivity" />
     </application>
