--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,9 @@ dependencies {
     implementation 'com.github.blongho:worldCountryData:1.4'
 
 
+    implementation 'com.airbnb.android:lottie:3.4.0'
+
+
     // implementation 'joda-time:joda-time:2.10.5'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
