some Ui changes And new Country Acitvity Created

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ android {
 
 repositories {
     maven {
-        url 'https://jitpack.io'}
+        url 'https://jitpack.io'
+    }
 }
 
 dependencies {
