--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Activities.CountryActivity"></activity>
-        <activity android:name=".Activities.SateActivity"></activity>
+        <activity android:name=".Activities.ResourcesActivity">
+
+        </activity>
+        <activity android:name=".Activities.CountryActivity" />
+        <activity android:name=".Activities.SateActivity" />
         <activity android:name=".Activities.AnalysisActivity" />
         <activity android:name=".Activities.HomeActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity android:name=".Activities.MainActivity" />
     </application>
